[gd_scene load_steps=8 format=3 uid="uid://ck4pj3q50i6xk"]

[ext_resource type="Script" path="res://Player.gd" id="1_7beyc"]
[ext_resource type="AudioStream" uid="uid://giq4vg7w3g65" path="res://Audio/SFX - Death Explosion.ogg" id="2_wnpg5"]
[ext_resource type="AudioStream" uid="uid://dpwyyd7nlnh27" path="res://Audio/SFX - Success.ogg" id="3_fxxqx"]
[ext_resource type="AudioStream" uid="uid://dt047jfyfv7t3" path="res://Audio/SFX - Main engine thrust.ogg" id="4_c7swc"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://booster_particles.tscn" id="5_v32lk"]

[sub_resource type="CylinderMesh" id="CylinderMesh_svoxy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_euqyw"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_7beyc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_svoxy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_euqyw")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wnpg5")
volume_db = -9.0

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fxxqx")
volume_db = -9.0

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_c7swc")

[node name="BoosterParticles" parent="." instance=ExtResource("5_v32lk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_v32lk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1, 0)

[node name="LeftBoosterParticles" parent="." instance=ExtResource("5_v32lk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
